lfs260/SOLUTIONS/s_06/secure-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tester
spec:
  tls:
  - hosts:
      - example.io
    secretName: example
  ingressClassName: nginx
  rules:
  - host: example.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tester
            port:
              number: 80
